# rag_graphQL

./: .gitignore  README.md  faiss.index  main.py  pyproject.toml  requirements.txt
backend/: app.py  embeddings.py  generator.py  graph_loader.py  retrieve.py
data/: drugs_diseases.csv
tests/: test_retrieval.py
